--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
     "name": "@fuzzco/font-loader",
     "version": "1.0.0",
     "description": "Load fonts quickly and easily.",
-    "main": "index.js",
+    "main": "lib/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "babel src -d lib"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "fontfaceobserver": "^2.1.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.4.4",
+        "@babel/core": "^7.4.4",
+        "@babel/preset-env": "^7.4.4"
     }
 }
